--- a/about-us.html
+++ b/about-us.html
@@ -28,23 +28,34 @@
                     <div class="site-header-inner">
                         <div class="brand header-brand">
                             <h1 class="m-0">
-                            <a href="#">
-                                <svg width="44" height="32" viewBox="0 0 44 32" xmlns="http://www.w3.org/2000/svg">
-                                    <title>Proxyman</title>
-                                    <defs>
-                                    <linearGradient x1="97.927%" y1="0%" x2="1.669%" y2="0%" id="logo-a">
-                                        <stop stop-color="#82DDFC" offset="0%"/>
-                                        <stop stop-color="#0181F6" offset="100%"/>
-                                    </linearGradient>
-                                    <linearGradient x1="96.64%" y1="1.497%" x2="0%" y2="44.56%" id="logo-b">
-                                        <stop stop-color="#A3A9F1" offset="0%"/>
-                                        <stop stop-color="#6A72E4" offset="99.203%"/>
-                                        <stop stop-color="#6A6FEC" offset="100%"/>
-                                    </linearGradient>
-                                    </defs>
-                                    <path d="M0 16h8a8 8 0 1 0 16 0h8c0 8.837-7.163 16-16 16S0 24.837 0 16z" fill="url(#logo-a)"/>
-                                    <path d="M12 0h8a8 8 0 1 0 16 0h8c0 8.837-7.163 16-16 16S12 8.837 12 0z" fill="url(#logo-b)" transform="rotate(180 28 8)"/>
-                                </svg>
+                            <a href="/">
+<svg width="179px" height="38px" viewBox="0 0 179 44" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <title>Proxyman</title>
+                                <defs>
+                                <linearGradient x1="0%" y1="0%" x2="100%" y2="0%" id="linearGradient-1">
+                                    <stop stop-color="#410FF8" offset="0%"></stop>
+                                    <stop stop-color="#410FF8" offset="100%"></stop>
+                                </linearGradient>
+                                <linearGradient x1="0%" y1="6.44444444%" x2="149.280463%" y2="83.6685372%" id="linearGradient-2">
+                                    <stop stop-color="#5A3BCB" offset="0%"></stop>
+                                    <stop stop-color="#3C07FF" offset="100%"></stop>
+                                </linearGradient>
+                                </defs>
+                                <g id="Logo" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                    <g id="Desktop-HD" transform="translate(-739.000000, -662.000000)">
+                                        <g id="Group-2" transform="translate(739.000000, 662.000000)">
+                                            <g id="a02bf522-8388-51fe-5110-208745922e5c-copy" transform="translate(-0.000000, 0.000000)" fill="url(#linearGradient-2)" fill-rule="nonzero">
+                                                <g id="Group">
+                                                <path d="M45.5587169,7.69785216 C46.501311,7.38365411 47.1297071,6.44105997 47.1297071,5.49846583 C47.1297071,4.24167364 46.0300139,3.14198047 44.7732218,3.14198047 C43.5164296,3.14198047 42.4167364,4.24167364 42.4167364,5.49846583 C42.4167364,6.598159 43.0451325,7.38365411 43.9877266,7.69785216 L43.9877266,16.0241004 C43.8306276,16.0241004 43.6735286,15.8670014 43.5164296,15.8670014 C41.3170432,6.75525802 33.304993,0 23.5648536,0 C13.8247141,0 5.81266388,6.75525802 3.61327755,15.8670014 C1.57099024,16.3382985 0,18.2234868 0,20.4228731 C0,22.6222594 1.57099024,24.5074477 3.61327755,24.9787448 C4.39877266,28.1207252 5.81266388,30.9485077 7.85495119,33.4620921 L7.85495119,37.7037657 C7.85495119,37.7037657 10.9969317,43.9877266 23.5648536,43.9877266 C36.1327755,43.9877266 39.2747559,37.7037657 39.2747559,37.7037657 L39.2747559,33.4620921 C41.3170432,31.1056067 42.7309344,28.1207252 43.5164296,24.9787448 C45.5587169,24.5074477 47.1297071,22.6222594 47.1297071,20.4228731 C47.1297071,19.0089819 46.501311,17.7521897 45.5587169,16.9666946 L45.5587169,7.69785216 Z M41.0028452,24.9787448 C40.2173501,28.1207252 38.6463598,30.7914086 36.4469735,32.990795 C33.147894,36.4469735 28.5920223,32.990795 23.5648536,32.990795 C18.5376848,32.990795 13.8247141,36.4469735 10.6827336,32.990795 C8.48334728,30.7914086 6.91235704,27.9636262 6.12686192,24.9787448 C5.65556485,23.4077545 5.49846583,21.9938633 5.49846583,20.4228731 C5.49846583,18.8518828 5.65556485,17.4379916 6.12686192,15.8670014 C8.16914923,8.01205021 15.2386053,5.49846583 23.5648536,5.49846583 C32.0482008,5.49846583 39.1176569,8.16914923 41.0028452,15.8670014 C41.3170432,17.2808926 41.6312413,18.8518828 41.6312413,20.4228731 C41.6312413,21.9938633 41.4741423,23.4077545 41.0028452,24.9787448 Z M23.5648536,9.2688424 C17.2808926,9.2688424 12.0966248,11.3111297 10.5256346,17.1237936 C10.2114365,18.2234868 10.0543375,19.3231799 10.0543375,20.4228731 C10.0543375,21.5225662 10.2114365,22.6222594 10.5256346,23.7219526 L10.6827336,24.0361506 C13.8247141,21.5225662 19.0089819,18.6947838 25.9213389,18.6947838 C19.3231799,21.3654672 15.0815063,25.1358438 12.7250209,28.1207252 C13.196318,28.7491213 13.510516,29.2204184 13.9818131,29.6917155 C14.7673082,30.4772106 15.7099024,30.7914086 16.6524965,30.7914086 C18.6947838,30.7914086 21.0512692,29.6917155 23.5648536,29.6917155 C26.0784379,29.6917155 28.4349233,30.7914086 30.4772106,30.7914086 C31.4198047,30.7914086 32.3623989,30.4772106 33.147894,29.6917155 C34.7188842,27.9636262 35.9756764,25.9213389 36.4469735,23.7219526 C36.7611715,22.6222594 36.9182706,21.5225662 36.9182706,20.4228731 C36.9182706,19.3231799 36.7611715,18.2234868 36.4469735,17.1237936 C35.0330823,11.1540307 29.8488145,9.2688424 23.5648536,9.2688424 Z" id="Shape"></path>
+                                            </g>
+                                        </g>
+                                        <text id="Proxyman" font-family="Georgia" font-size="26" font-weight="normal" fill="#434343">
+                                        <tspan x="62" y="31">Proxyman</tspan>
+                                        </text>
+                                    </g>
+                                </g>
+                            </g>
+                        </svg>
                             </a>
                             </h1>
                         </div>
@@ -151,23 +162,35 @@
                 <div class="container">
                     <div class="site-footer-inner">
                         <div class="brand footer-brand">
-                            <a href="#">
-                                <svg width="44" height="32" viewBox="0 0 44 32" xmlns="http://www.w3.org/2000/svg">
-                                    <title>Proxyman</title>
-                                    <defs>
-                                    <linearGradient x1="97.927%" y1="0%" x2="1.669%" y2="0%" id="logo-footer-a">
-                                        <stop stop-color="#82DDFC" offset="0%"/>
-                                        <stop stop-color="#0181F6" offset="100%"/>
-                                    </linearGradient>
-                                    <linearGradient x1="96.64%" y1="1.497%" x2="0%" y2="44.56%" id="logo-footer-b">
-                                        <stop stop-color="#A3A9F1" offset="0%"/>
-                                        <stop stop-color="#6A72E4" offset="99.203%"/>
-                                        <stop stop-color="#6A6FEC" offset="100%"/>
-                                    </linearGradient>
-                                    </defs>
-                                    <path d="M0 16h8a8 8 0 1 0 16 0h8c0 8.837-7.163 16-16 16S0 24.837 0 16z" fill="url(#logo-footer-a)"/>
-                                    <path d="M12 0h8a8 8 0 1 0 16 0h8c0 8.837-7.163 16-16 16S12 8.837 12 0z" fill="url(#logo-footer-b)" transform="rotate(180 28 8)"/>
-                                </svg>
+                            <a href="/">
+<svg width="197px" height="44px" viewBox="0 0 197 70" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <title>Group 2</title>
+                            <defs>
+                                <linearGradient x1="0%" y1="0%" x2="100%" y2="0%" id="linearGradient-1">
+                                    <stop stop-color="#410FF8" offset="0%"></stop>
+                                    <stop stop-color="#410FF8" offset="100%"></stop>
+                                </linearGradient>
+                                <linearGradient x1="0%" y1="6.44444444%" x2="149.280463%" y2="83.6685372%" id="linearGradient-2">
+                                    <stop stop-color="#5A3BCB" offset="0%"></stop>
+                                    <stop stop-color="#3C07FF" offset="100%"></stop>
+                                </linearGradient>
+                            </defs>
+                            <g id="Logo" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                <g id="Desktop-HD" transform="translate(-726.000000, -649.000000)">
+                                    <g id="Group-2" transform="translate(726.000000, 649.000000)">
+                                        <circle id="Oval" fill="#FFFFFF" cx="35" cy="35" r="35"></circle>
+                                        <g id="a02bf522-8388-51fe-5110-208745922e5c-copy" transform="translate(11.000000, 14.000000)" fill="url(#linearGradient-2)" fill-rule="nonzero">
+                                            <g id="Group">
+                                                <path d="M45.5587169,7.69785216 C46.501311,7.38365411 47.1297071,6.44105997 47.1297071,5.49846583 C47.1297071,4.24167364 46.0300139,3.14198047 44.7732218,3.14198047 C43.5164296,3.14198047 42.4167364,4.24167364 42.4167364,5.49846583 C42.4167364,6.598159 43.0451325,7.38365411 43.9877266,7.69785216 L43.9877266,16.0241004 C43.8306276,16.0241004 43.6735286,15.8670014 43.5164296,15.8670014 C41.3170432,6.75525802 33.304993,0 23.5648536,0 C13.8247141,0 5.81266388,6.75525802 3.61327755,15.8670014 C1.57099024,16.3382985 0,18.2234868 0,20.4228731 C0,22.6222594 1.57099024,24.5074477 3.61327755,24.9787448 C4.39877266,28.1207252 5.81266388,30.9485077 7.85495119,33.4620921 L7.85495119,37.7037657 C7.85495119,37.7037657 10.9969317,43.9877266 23.5648536,43.9877266 C36.1327755,43.9877266 39.2747559,37.7037657 39.2747559,37.7037657 L39.2747559,33.4620921 C41.3170432,31.1056067 42.7309344,28.1207252 43.5164296,24.9787448 C45.5587169,24.5074477 47.1297071,22.6222594 47.1297071,20.4228731 C47.1297071,19.0089819 46.501311,17.7521897 45.5587169,16.9666946 L45.5587169,7.69785216 Z M41.0028452,24.9787448 C40.2173501,28.1207252 38.6463598,30.7914086 36.4469735,32.990795 C33.147894,36.4469735 28.5920223,32.990795 23.5648536,32.990795 C18.5376848,32.990795 13.8247141,36.4469735 10.6827336,32.990795 C8.48334728,30.7914086 6.91235704,27.9636262 6.12686192,24.9787448 C5.65556485,23.4077545 5.49846583,21.9938633 5.49846583,20.4228731 C5.49846583,18.8518828 5.65556485,17.4379916 6.12686192,15.8670014 C8.16914923,8.01205021 15.2386053,5.49846583 23.5648536,5.49846583 C32.0482008,5.49846583 39.1176569,8.16914923 41.0028452,15.8670014 C41.3170432,17.2808926 41.6312413,18.8518828 41.6312413,20.4228731 C41.6312413,21.9938633 41.4741423,23.4077545 41.0028452,24.9787448 Z M23.5648536,9.2688424 C17.2808926,9.2688424 12.0966248,11.3111297 10.5256346,17.1237936 C10.2114365,18.2234868 10.0543375,19.3231799 10.0543375,20.4228731 C10.0543375,21.5225662 10.2114365,22.6222594 10.5256346,23.7219526 L10.6827336,24.0361506 C13.8247141,21.5225662 19.0089819,18.6947838 25.9213389,18.6947838 C19.3231799,21.3654672 15.0815063,25.1358438 12.7250209,28.1207252 C13.196318,28.7491213 13.510516,29.2204184 13.9818131,29.6917155 C14.7673082,30.4772106 15.7099024,30.7914086 16.6524965,30.7914086 C18.6947838,30.7914086 21.0512692,29.6917155 23.5648536,29.6917155 C26.0784379,29.6917155 28.4349233,30.7914086 30.4772106,30.7914086 C31.4198047,30.7914086 32.3623989,30.4772106 33.147894,29.6917155 C34.7188842,27.9636262 35.9756764,25.9213389 36.4469735,23.7219526 C36.7611715,22.6222594 36.9182706,21.5225662 36.9182706,20.4228731 C36.9182706,19.3231799 36.7611715,18.2234868 36.4469735,17.1237936 C35.0330823,11.1540307 29.8488145,9.2688424 23.5648536,9.2688424 Z" id="Shape"></path>
+                                            </g>
+                                        </g>
+                                        <text id="Proxyman" font-family="Georgia" font-size="26" font-weight="normal" fill="#FFFFFF">
+                                            <tspan x="80" y="42">Proxyman</tspan>
+                                        </text>
+                                    </g>
+                                </g>
+                            </g>
+                        </svg>
                             </a>
                         </div>
                     <ul class="footer-links list-reset">
