--- a/index.html
+++ b/index.html
@@ -92,18 +92,8 @@
 							        <path d="M500.754 531.682c23.168-12.535-176.81-30.95-173.117-8.023-16.445-27.256-.668 111.452-1.357 97.18-17.805 14.436 202.398 23.384 180.678 25.205 4.694-22.809 13.508-143.183-15.392-139.49-1.105-3.219 20.111-5.785 9.188 25.128m-1.834 1.51c22.705-12.117 22.727 86.08 26.346 108.244-16.116-26.348-196.655-8.263-197.329-22.06-17.45 13.955 2.35-93.395-18.937-91.634 4.601-22.049 209.238-22.41 180.916-18.84" fill="#FF6DB1"/>
 								</svg>
 							</div>
-							<div class="hero-media is-revealing" style="perspective:800px">
-								<svg width="528" height="401" viewBox="0 0 528 401" xmlns="http://www.w3.org/2000/svg">
-									<defs>
-										<filter x="-500%" y="-500%" width="1000%" height="1000%" filterUnits="objectBoundingBox" id="dropshadow-media">
-											<feOffset dy="16" in="SourceAlpha" result="shadowOffsetOuter"/>
-											<feGaussianBlur stdDeviation="24" in="shadowOffsetOuter" result="shadowBlurOuter"/>
-											<feColorMatrix values="0 0 0 0 0.06 0 0 0 0 0.13 0 0 0 0 0.34 0 0 0 0.14 0" in="shadowBlurOuter"/>
-										</filter>
-									</defs>
-									<path fill="#FFF" d="M0 52L528 .832v399.336L0 349z" style="mix-blend-mode:multiply;filter:url(#dropshadow-media)"/>
-									<path fill="#FFF" d="M0 52L528 .832v399.336L0 349z"/>
-								</svg>
+							<div class="hero-media is-revealing">
+                                <img src="dist/images/main.png"></img>
 							</div>
                         </div>
                     </div>
@@ -304,7 +294,7 @@
                             </div>
                             <div class="feature-extended-body">
                                 <h3 class="mt-0">SSL Proxying</h3>
-                                <p>Proxyman can be used as a man-in-the-middle that logs all <b>HTTP/HTTPS</b> traffic between your applications and SSL Web Server.<br><br>Proxyman will dynamically generate certificates on-the-fly, whichenables developers to see HTTPS in plain text.</p>
+                                <p>Proxyman can be used as a man-in-the-middle that logs all <b>HTTP/HTTPS</b> traffic between your applications and SSL Web Server.<br><br>Proxyman will dynamically generate certificates on-the-fly, which enables developers to see HTTPS in plain text.</p>
                             </div>
                         </div>
                         <div class="feature-extended">
