Add more images

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         </div>
                         <div class="feature-extended">
                             <div class="feature-extended-image is-revealing">
-                                <img class="even" src="dist/images/built_macos.png"></img>
+                                <img class="even" src="dist/images/built-mac.png"></img>
                             </div>
                             <div class="feature-extended-body">
                                 <h3 class="mt-0">Exclusively built for macOS</h3>
@@ -146,7 +146,7 @@
                         </div>
                         <div class="feature-extended">
                             <div class="feature-extended-image is-revealing">
-                                <img class="even" src="dist/images/finder.png"></img>
+                                <img class="even" src="dist/images/finder-2.png"></img>
                             </div>
                             <div class="feature-extended-body">
                                 <h3 class="mt-0">Categorize like Finder</h3>
@@ -159,7 +159,7 @@
                             </div>
                             <div class="feature-extended-body">
                                 <h3 class="mt-0">SSL Proxying</h3>
-                                <p>Proxyman can be used as a man-in-the-middle that logs all <b>HTTP/HTTPS</b> traffic between your applications and SSL Web Server.<br><br>Proxyman will dynamically generate certificates on-the-fly, which enables developers to see HTTPS in plain text.</p>
+                                <p>Proxyman can be used as a man-in-the-middle that logs all <b>HTTP/HTTPS</b> traffic between your applications and SSL Web Server.<br><br>Proxyman will dynamically generate certificates on-the-fly, which enables developers to see HTTPS in plain text.<br><br>Proxyman is also integrated with <b>iOS simulators</b> and <b>iOS devices</b>.</p>
                             </div>
                         </div>
                         <div class="feature-extended">
@@ -168,7 +168,7 @@
                             </div>
                             <div class="feature-extended-body">
                                 <h3 class="mt-0">Comprehensive debug tools</h3>
-                                <p>Built-in tools include <b>Compose</b>, <b>Repeat</b>, <b>Export</b>.<br><br>Proxyman makes it much easier to catch, replicate bugs and share your work to teammates quickly.<br><br>Proxyman is integrated with <b>iOS simulators</b> and <b>iOS devices</b>.</p>
+                                <p>Built-in tools include <b>Compose</b>, <b>Repeat</b>, <b>Export</b>.<br><br>Proxyman makes it much easier to catch, replicate bugs and share your work to teammates quickly.</p>
                             </div>
                         </div>
                     </div>
@@ -214,7 +214,7 @@
                                         <div class="accordion-icon"></div>
                                     </div>
                                     <div class="accordion-body">
-                                        <p>Limited specific apps/domains are the selling-point of Proxyman. You can concentrate on a particular app/domain by <b>Search</b> it and <b>pin</b> it. Catogize your workplace like Finder.<br><br>All other irrelevant will be <b>ignored<b>.</p>
+                                        <p>Limited specific apps/domains are the selling-point of Proxyman. You can concentrate on a particular app/domain by <b>Search</b> it and <b>pin</b> it. Catogize your workplace like Finder.<br><br>All other irrelevant will be <b>ignored</b>.</p>
                                     </div>
                                 </li>
 								<li>
