Add more images

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                         </div>
                         <div class="feature-extended">
                             <div class="feature-extended-image is-revealing">
-                                <img class="odd" src="dist/images/SSL.png"></img>
+                                <img class="odd ssl" src="dist/images/SSL-2.png"></img>
                             </div>
                             <div class="feature-extended-body">
                                 <h3 class="mt-0">SSL Proxying</h3>
