--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<div class="hero-copy">
 	                        <h1 class="hero-title mt-0">An intuitive HTTP debugging proxy</h1>
 	                        <p class="hero-paragraph">Proxyman is a high-performance macOS app, which enables developers to view HTTP/HTTPS requests from apps and domains.</p>
-	                        <p class="hero-cta"><a class="button button-primary button-shadow" href="#">Download Proxyman (1.3.4)</a></p>
+	                        <p class="hero-cta"><a class="button button-primary button-shadow" href="https://s3.us-east-2.amazonaws.com/proxyman/1340/Proxyman_1.3.4.dmg">Download Proxyman (1.3.4)</a></p>
                             <p class="hero-detail-OS">Requires macOS 10.12+. <a href="https://github.com/ProxymanApp/Proxyman">Github</a>, <a href="https://github.com/ProxymanApp/Proxyman/releases">Changelog</a></p>
 						</div>
 						<div class="hero-illustration">
@@ -137,7 +137,7 @@
                         </div>
                         <div class="feature-extended">
                             <div class="feature-extended-image is-revealing">
-                                <img class="odd" src="dist/images/debug.png"></img>
+                                <img class="odd" src="dist/images/core-3.png"></img>
                             </div>
                             <div class="feature-extended-body">
                                 <h3 class="mt-0">Sophisticated proxy core</h3>
@@ -247,7 +247,7 @@
                         <h2 class="section-title mt-0 text-center">See Proxyman in action 🚀</h2>
                         <div class="pricing-faqs container-sm text-center">
                             <div class="section-title">
-                                <p class="hero-cta"><a class="button button-primary button-shadow" href="#">Download Proxyman (1.3.4)</a></p>
+                                <p class="hero-cta"><a class="button button-primary button-shadow" href="https://s3.us-east-2.amazonaws.com/proxyman/1340/Proxyman_1.3.4.dmg">Download Proxyman (1.3.4)</a></p>
                                 <p class="hero-detail-OS">Requires macOS 10.12+. <a href="https://github.com/ProxymanApp/Proxyman">Github</a>, <a href="https://github.com/ProxymanApp/Proxyman/releases">Changelog</a></p>
                             </div>
                         </div>
