--- a/privacy.html
+++ b/privacy.html
@@ -69,7 +69,6 @@
                             <div class="features-extended-header text-left">
                                 <div class="container-sm">
                                     <h1>Privacy Policy</h1>
-                                    <p>Effective date: April 04, 2019</p>
                                     <p>Proxyman Ltd ("us", "we", or "our") operates the <a href="https://proxyman.app">https://proxyman.app</a> website (hereinafter referred to as the "Service").</p>
                                     <p>This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data.</p>
                                     <p>We use your data to provide and improve the Service. By using the Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, the terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, accessible from <a href="https://proxyman.app">https://proxyman.app</a></p>
@@ -152,6 +151,7 @@
                                         <li>By email: nghia@proxyman.app</li>
                                         
                                     </ul>
+                                    <p>Last updated date: April 04, 2019</p>
                                 </div>
                             </div>
                         </div>
