--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
     <link href="https://fonts.googleapis.com/css?family=Hind+Vadodara:400,600,700|Frank+Ruhl+Libre:700" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.css">
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://proxyman.app/" />
+    <meta property="og:title" content="Proxyman • An intuitive HTTP debugging proxy on macOS" />
+    <meta property="og:description" content="Proxyman is a high-performance macOS app, which enables developers to view HTTP/HTTPS requests from apps and domains." />
+    <meta property="og:image" content="https://proxyman.app/img/background/laptop_1.png" />
+
+    <!--[if lt IE 9]>
+     <script src="js/html5shiv.min.js"></script>
+     <script src="js/respond.min.js"></script>
+    <![endif]-->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123178888-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-123178888-1');
+</script>
 </head>
 <body class="is-boxed has-animations">
     <div class="body-wrap boxed-container">
